grabbing API uccessfully

--- a/views/parks/index.liquid
+++ b/views/parks/index.liquid
@@ -1,19 +1,11 @@
-<!-- {% layout 'layout.liquid' %}
-    {% block content %}
-        <div class="container-md">
-            <article>
-                <h2>Location: {{data.name}}</h2>
-                <h4>Weather Description: {{data.weather[0].description}}</h4>
-                {% if data.main.temp > '89' %}
-                <h4 style="color: red"> Temperature: {{data.main.temp}}<h4>
-                    {% elsif data.main.temp < '40' %}
-                    <h4 style="color: blue">Temperature: {{data.main.temp}}<h4>
-                        {% else %}
-                        <h4>Temperature: {{data.main.temp}}<h4>
-                {% endif %}
-                <h4>Today's High: {{data.main.temp_max}}</h4>
-                <h4>Today's Low: {{data.main.temp_min}}</h4>
-                <button><a href="/weather">Change Location</a></button>
-            </article>
-        </div>
-    {% endblock %} -->
+{% layout 'layout.liquid' %}
+
+{% block content%}
+<div>
+    
+    <p>Park Name:{{park.data[0].fullName}}</p>
+    <p>Park City: {{park.color}}</p>
+    <p>Park State:</p>
+    
+</div>
+{% endblock %}
