index is working

--- a/views/parks/index.liquid
+++ b/views/parks/index.liquid
@@ -3,7 +3,7 @@
 {% block content%}
 <div>
     
-    <p>Park Name:{{park.data[0].fullName}}</p>
+    <p>Park Name:{{park.fullName}}</p>
     <p>Park City: {{park.color}}</p>
     <p>Park State:</p>
     
