geust_show.liquid working with data fields

--- a/views/parks/index.liquid
+++ b/views/parks/index.liquid
@@ -4,7 +4,7 @@
 <div>
     
     <p>Park Name:{{park.fullName}}</p>
-    <p>Park City: {{park.color}}</p>
+    <p>Park City: {{park.city}}</p>
     <p>Park State:</p>
     
 </div>
