actual index guest working

--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -19,8 +19,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <a href="/fruits/new" class="nav-link text-light">New</a>
-                <a href="/fruits/mine" class="nav-link text-light">my</a>
+                <a href="/fruits/new" class="nav-link text-light">New Park</a>
+                <a href="/fruits/mine" class="nav-link text-light">My Parks</a>
                 <a href="/users/signup" class="nav-link text-light">Sign Up</a>
                 <a href="/users/login" class="nav-link text-light">Log In</a>
                 <a href="/users/logout" class="nav-link text-light">Log Out</a>
