--- a/views/parks/guestShow.liquid
+++ b/views/parks/guestShow.liquid
@@ -1,7 +1,7 @@
 {% layout 'layout.liquid' %}
 
 {% block content%}
-<div>
+<div style="color: yellow">
     
     <h4>Park Name: {{park.fullName}}</h4>
     <p>Park City: {{park.addresses[0].city}}</p>
