--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -14,13 +14,13 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
-            <a href="/fruits" class="navbar-brand">My Parks Tracker</a>
+            <a href="/parks" class="navbar-brand">My Parks Tracker</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <a href="/fruits/new" class="nav-link text-light">New Park</a>
-                <a href="/fruits/mine" class="nav-link text-light">My Parks</a>
+                <a href="/parks/new" class="nav-link text-light">New Park</a>
+                <a href="/parks/mine" class="nav-link text-light">My Parks</a>
                 <a href="/users/signup" class="nav-link text-light">Sign Up</a>
                 <a href="/users/login" class="nav-link text-light">Log In</a>
                 <a href="/users/logout" class="nav-link text-light">Log Out</a>
