--- a/views/comment.liquid
+++ b/views/comment.liquid
@@ -6,12 +6,18 @@
         <div class="d-flex justify-content-between">
             <small>author: {{ username }}</small>
             <form action="/comments/delete/{{park._id}}/{{comment._id}}?_method=DELETE" method="POST">
-                <input type="submit" value="X"/>                
+                <input type="submit" value="X"/> 
+
             </form>
         </div>
     </div>
 </div>
+<div class="btn-group">
 
+        <a href="/parks/{{park}}/edit" class="btn btn-primary">Edit Park</a>
+        <form action="/parks/{{park._id}}?_method=DELETE" method="POST">
+            <input type="submit" value="Remove Park" class="btn btn-danger">
+        </form>
 {% endblock %}
 
 <!-- create an edit and a delete button... these can be the same as the edit and delete from fruits-->
