--- a/views/parks/index.liquid
+++ b/views/parks/index.liquid
@@ -7,6 +7,10 @@
     <div class="row">
         {% for park in park %}
             <a href="/parks/{{park.parkCode}}" style="width: 25rem; color:yellow;">{{park.fullName}}</a>
+            <form action="/parks/{{park.id}}?_method=DELETE" method="POST">
+                <input type="submit" value="Remove Park" class="btn btn-danger">
+                <a href="/parks/{{park.id}}/edit" class="btn btn-primary">Edit Park</a>
+            </form>
         {% endfor %}
     </div>
 
