--- a/views/parks/show.liquid
+++ b/views/parks/show.liquid
@@ -7,7 +7,7 @@
     <p>Park City: {{park.addresses[0].city}}</p>
     <p>Park State: {{park.states}}</p>
     <p>Entrance Fee: {{park.entranceFees[0].cost.}}, {{park.entranceFees[0].description}}</p>    
-    <img src={{park.images.}}>
+    <img src="{{park.images}}">
     <p>Description: {{park.description}}</p>
     <form action="/parks/create" method="POST">
         <fieldset>
@@ -26,7 +26,7 @@
                 value={{park.parkCode}} 
                 hidden
             >
-        
+    
             <input 
                 type="submit" 
                 value="Add To My Parks"
@@ -36,8 +36,8 @@
     </form>
     <div class="btn-group">
 
-        <a href="/parks/{{park}}/edit" class="btn btn-primary">Edit Park</a>
-        <form action="/parks/{{park.parkCode}}?_method=DELETE" method="POST">
+        <a href="/parks/{{park.id}}/edit" class="btn btn-primary">Edit Park</a>
+        <form action="/parks/{{park._id}}?_method=DELETE" method="POST">
             <input type="submit" value="Remove Park" class="btn btn-danger">
         </form>
     </div>
@@ -62,6 +62,7 @@
     {% endif %}
 
 </div>
+
 {% endblock %}
 
 
