--- a/views/users/signup.liquid
+++ b/views/users/signup.liquid
@@ -3,7 +3,7 @@
 
 <div class="container-md">
     <form action="/users/signup" method="POST">
-        <fieldset>
+        <fieldset style="color: yellow;">
             <legend>New User</legend>
             <label class="form-label">Username:</label>
             <input 
