--- a/views/parks/index.liquid
+++ b/views/parks/index.liquid
@@ -1,3 +1,6 @@
+
+
+
 {% layout 'layout.liquid' %}
 
 {% block content%}
@@ -6,13 +9,20 @@
     <h4 style="color: yellow;">To view parks click on any park</h4>
     <div class="row">
         {% for park in park %}
-            <a href="/parks/{{park.parkCode}}" style="width: 25rem; color:yellow;">{{park.fullName}}</a>
-            <form action="/parks/{{park.id}}?_method=DELETE" method="POST">
+        <div class="card" style="width: 18rem; background-color: rgb(36, 121, 73) ;">
+            <img src={{park.images[0].url}} style="width: 250px; margin-top: 8px;">
+            <div style="text-align: left;">
+                <a href="/parks/{{park.parkCode}}" style="width: 25rem; text-align: center; color:yellow;">{{park.fullName}}</a>
+            </div>
+        </div>
+            <!-- <form action="/parks/{{park.id}}?_method=DELETE" method="POST">
                 <input type="submit" value="Remove Park" class="btn btn-danger">
-                <a href="/parks/{{park.id}}/edit" class="btn btn-primary">Edit Park</a>
             </form>
-        {% endfor %}
+            <form action="/parks/{{park.id}}/edit"method="PUT"> 
+                <input type="submit" value="Edit Park" class="btn btn-danger">                          
+            </form> -->
+        {% endfor %} 
     </div>
 
 </div>
-{% endblock %}
+{% endblock %} 
