--- a/views/users/login.liquid
+++ b/views/users/login.liquid
@@ -3,7 +3,7 @@
 
 <div class="container-md">
     <form action="/users/login" method="POST">
-        <fieldset>
+        <fieldset style="color: yellow;">
             <legend>Welcome back, please log in here</legend>
             <label class="form-label">Username:</label>
             <input 
