update for deploy

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,6 @@
 body{
+    /* background-image: url(https://downeast.com/wp-content/uploads/2020/06/tom-henell-ckggMjk-gqc-unsplash.jpg); */
+    background-size:contain;
     background-color:rgb(29, 93, 63);
 
 }
