--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
-            <a href="/parks" class="navbar-brand">My Parks Tracker</a>
+            <a href="/parks" class="navbar-brand">The Parks Tracker</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
