--- a/views/parks/MyIndex.liquid
+++ b/views/parks/MyIndex.liquid
@@ -4,18 +4,45 @@
 
 {% block content%}
 <div>
-    <h2 class="display-4" style=color:yellow;>My Parks </h2>
-    <h4 style="color: yellow;">Click To View A Park</h4>
+    <h2 class="display-4" style=color:yellow;>Welcome To My Parks Tracker</h2>
+    <h4 style="color: yellow;">To view parks click on any park</h4>
     <div class="row">
         {% for park in park %}
             <a href="/parks/{{park.parkCode}}" style="width: 25rem; color:yellow;">{{park.fullName}}</a>
             <form action="/parks/{{park.id}}?_method=DELETE" method="POST">
                 <input type="submit" value="Remove Park" class="btn btn-danger">
             </form>
-        
+            <form action="/parks/{{park.id}}/edit"method="PUT"> 
+                <input type="submit" value="Edit Park" class="btn btn-danger">                          
+            </form>
         {% endfor %} 
     </div>
 
 </div>
 {% endblock %}
 
+
+<!-- 
+{% layout 'layout.liquid' %}
+
+{% block content %}
+<div>
+    <h2 class="display-6" style="color:yellow;">All Parks</h2>
+    <a href="/parks/new" class="nav-link" style="color:yellow;">Add New Park</a>
+    <div class="row">
+
+            <div class="card" style="width: 22rem">
+                <h5 class="card-header">{{park.name}}</h5>
+                <div class="card-body" style="background-color:rgb(29, 93, 63);">
+                    <a href="/mine"  style="width: 25rem; color:yellow;">View Park</a>  
+                    <form action="/parks/{{park.id}}?_method=DELETE" method="POST">
+                        <input type="submit" value="Remove Park" class="btn btn-danger">
+                        <a href="/parks/{{park.id}}/edit" class="btn btn-primary">Edit Park</a>
+                    </form>
+            
+                </div>
+            </div>
+    
+    </div>
+</div>
+{% endblock %} -->
