--- a/views/parks/index.liquid
+++ b/views/parks/index.liquid
@@ -5,23 +5,22 @@
 
 {% block content%}
 <div>
-    <h2 class="display-4" style=color:yellow;>Welcome To Parks Tracker</h2>
+    <h2 class="display-4" style=color:yellow;>Welcome To My Parks Tracker</h2>
     <h4 style="color: yellow;">To view parks click on any park</h4>
     <div class="row">
         {% for park in park %}
-        <form action="/parks/create" method="POST">
-            <input name="parkCode" value="{{park.parkCode}}" type="hidden"> 
-            <input name="fullName" value="{{park.fullName}}" type="hidden">
-            <input name="parkState" value="{{park.addresses[0].stateCode}}"type="hidden">
-            <input name="entranceFees" value="{{park.entranceFees[0].cost}}"type="hidden">
-            <input name="description" value="{{park.description}}" type="hidden">
-            <div class="card" style="width: 18rem; background-color: rgb(36, 121, 73) ;">
-                <img src={{park.images[0].url}} style="width: 250px; margin-top: 8px;">
-                <div style="text-align: left;">
-                    <button type="submit">{{park.fullName}}</button>
-                </div>
+        <div class="card" style="width: 18rem; background-color: rgb(36, 121, 73) ;">
+            <img src={{park.images[0].url}} style="width: 250px; margin-top: 8px;">
+            <div style="text-align: left;">
+                <a href="/parks/{{park.parkCode}}" style="width: 25rem; text-align: center; color:yellow;">{{park.fullName}}</a>
             </div>
-        </form>
+        </div>
+            <!-- <form action="/parks/{{park.id}}?_method=DELETE" method="POST">
+                <input type="submit" value="Remove Park" class="btn btn-danger">
+            </form>
+            <form action="/parks/{{park.id}}/edit"method="PUT"> 
+                <input type="submit" value="Edit Park" class="btn btn-danger">                          
+            </form> -->
         {% endfor %} 
     </div>
 
