--- a/views/parks/MyIndex.liquid
+++ b/views/parks/MyIndex.liquid
@@ -4,16 +4,13 @@
 
 {% block content%}
 <div>
-    <h2 class="display-4" style=color:yellow;>Welcome To My Parks Tracker</h2>
-    <h4 style="color: yellow;">To view parks click on any park</h4>
+    <h2 class="display-4" style=color:yellow;>Your Parks</h2>
+    <h4 style="color: yellow;">Click any park to view</h4>
     <div class="row">
         {% for park in park %}
             <a href="/parks/{{park.parkCode}}" style="width: 25rem; color:yellow;">{{park.fullName}}</a>
             <form action="/parks/{{park.id}}?_method=DELETE" method="POST">
                 <input type="submit" value="Remove Park" class="btn btn-danger">
-            </form>
-            <form action="/parks/{{park.id}}/edit"method="PUT"> 
-                <input type="submit" value="Edit Park" class="btn btn-danger">                          
             </form>
         {% endfor %} 
     </div>
