--- a/views/parks/index.liquid
+++ b/views/parks/index.liquid
@@ -6,10 +6,10 @@
 {% block content%}
 <div>
     <h2 class="display-4" style=color:yellow;>Welcome To My Parks Tracker</h2>
-    <h4 style="color: yellow;">To view parks click on any park</h4>
+    <h4 style="color: yellow;">Click any park to view</h4>
     <div class="row">
         {% for park in park %}
-        <div class="card" style="width: 18rem; background-color: rgb(36, 121, 73) ;">
+        <div class="card" style="width: 18rem; background-color: rgb(36, 121, 73);">
             <img src={{park.images[0].url}} style="width: 250px; margin-top: 8px;">
             <div style="text-align: left;">
                 <a href="/parks/{{park.parkCode}}" style="width: 25rem; text-align: center; color:yellow;">{{park.fullName}}</a>
