--- a/views/comment.liquid
+++ b/views/comment.liquid
@@ -6,7 +6,7 @@
         <div class="d-flex justify-content-between">
             <small>author: {{ comment.author.username }}</small>          
             <div class="btn-group">
-                <a href="/comments/{{parkCode}}/edit" class="btn btn-primary">Edit Comment</a>
+                <a href="/comments/edit/{{parkCode}}/{{comment.id}}" class="btn btn-primary">Edit Comment</a>
                 <form action="/comments/delete/{{parkCode}}/{{comment.id}}?_method=DELETE" method="POST">
                     <input type="submit" value="Remove Comment" class="btn btn-danger">
                 </form>
