--- a/views/parks/edit.liquid
+++ b/views/parks/edit.liquid
@@ -2,14 +2,15 @@
 // i need to make this only post on users page
 {% block content %}
 <div class="container-mn" style="color: yellow;">
-<form action="/parks/{{park.parkCode}}" method="PATCH">
+<form action="/comments/edit/{{comment.id}}?_method=PATCH" method="POST">
     <fieldset>
         <legend style="color: yellow;">Edit Comment</legend>
         <label class="form-lable">Comment:</label>
             <input 
+                value="{{comment.note}}"
                 class="form-control"
                 type="text" 
-                name="comment"
+                name="note"
                 placeholder="Enter Comment"
             >
     </fieldset>
@@ -18,7 +19,7 @@
             type="submit" 
             class="btn btn-success"   
         >
-        <a href="/parks" class="btn btn-warning">Nevermind</a>
+        <a href="/parks/{{pc}}" class="btn btn-warning">Nevermind</a>
         </div>
 </form>
 </div>
