--- a/views/parks/show.liquid
+++ b/views/parks/show.liquid
@@ -34,7 +34,7 @@
             >
         </fieldset>
     </form>
-    <div class="col-md-6" style="text-align:center;">
+    <div id='comment' class="col-md-6" style="text-align:center;">
         <form action="/comments/{{park.parkCode}}" method="POST">
             <fieldset>
                 <legend>Add comment</legend>
@@ -45,8 +45,8 @@
         </form>
     </div>
     {% if comments.length > 0 %}
-    <div class="container-sm justify-content-center" style="color: black;">
-        <div class="col-md-8 col-lg-6" >
+    <div id="comment-container" class="container-sm justify-content-center" style="color: black;">
+        <div id="comment-card" class="col-sm-10 col-md-8 col-lg-6" >
             {% for comment in comments %}
             {% render '../comment.liquid' comment: comment, userId: userId, parkCode: park.parkCode%}
             {% endfor %}
