--- a/views/comment.liquid
+++ b/views/comment.liquid
@@ -1,11 +1,12 @@
 {% block content %}
 
+
 <div class="card md-4 shadow">
     <div class="card-body">
         <p>{{ comment.note }}</p>
         <div class="d-flex justify-content-between">
             <small>author: {{ comment.author.username }}</small>          
-            <div class="btn-group">
+            <div id= "comment-buttons" class="btn-group">
                 <a href="/comments/edit/{{parkCode}}/{{comment.id}}" class="btn btn-primary">Edit Comment</a>
                 <form action="/comments/delete/{{parkCode}}/{{comment.id}}?_method=DELETE" method="POST">
                     <input type="submit" value="Remove Comment" class="btn btn-danger">
