--- a/views/parks/index.liquid
+++ b/views/parks/index.liquid
@@ -4,7 +4,7 @@
 {% layout 'layout.liquid' %}
 
 {% block content%}
-<div>
+<div class="cards">
     <h2 class="display-4" style=color:yellow;>Welcome To My Parks Tracker</h2>
     <h4 style="color: yellow;">Click any park to view</h4>
     <div class="row">
