--- a/views/parks/show.liquid
+++ b/views/parks/show.liquid
@@ -1,7 +1,7 @@
 {% layout 'layout.liquid' %}
 
 {% block content%}
-<div style="text-align: center; color: yellow;">
+<div class="show">
     
     <h4>Park Name: {{park.fullName}}</h4>
     <img src={{park.images[0].url}} style="width:600px;">
